Add `Current` and `System` color value types

--- a/packages/alfa-css/tsconfig.json
+++ b/packages/alfa-css/tsconfig.json
@@ -12,10 +12,12 @@
     "src/value.ts",
     "src/value/angle.ts",
     "src/value/color.ts",
+    "src/value/color/current.ts",
     "src/value/color/hex.ts",
     "src/value/color/hsl.ts",
     "src/value/color/named.ts",
     "src/value/color/rgb.ts",
+    "src/value/color/system.ts",
     "src/value/converter.ts",
     "src/value/function.ts",
     "src/value/gradient.ts",
