Implement algorithm for processing rows

--- a/packages/alfa-dom/tsconfig.json
+++ b/packages/alfa-dom/tsconfig.json
@@ -55,6 +55,9 @@
       "path": "../alfa-mapper"
     },
     {
+      "path": "../alfa-math"
+    },
+    {
       "path": "../alfa-option"
     },
     {
