--- a/packages/alfa-dom/tsconfig.json
+++ b/packages/alfa-dom/tsconfig.json
@@ -33,7 +33,8 @@
     "src/style/rule/supports.ts",
     "src/style/sheet.ts",
     "src/tables/structure.ts",
-    "test/tables/structure.spec.ts"
+    "test/tables/structure.spec.ts",
+    "test/tables/microsyntaxes.spec.ts"
   ],
   "references": [
     {
