Test parse attribute function

--- a/packages/alfa-dom/tsconfig.json
+++ b/packages/alfa-dom/tsconfig.json
@@ -34,7 +34,8 @@
     "src/style/sheet.ts",
     "src/tables/structure.ts",
     "test/tables/structure.spec.ts",
-    "test/tables/microsyntaxes.spec.ts"
+    "test/tables/microsyntaxes.spec.ts",
+    "test/tables/parseAttribute.spec.ts"
   ],
   "references": [
     {
