--- a/packages/alfa-css/tsconfig.json
+++ b/packages/alfa-css/tsconfig.json
@@ -49,7 +49,13 @@
       "path": "../alfa-equatable"
     },
     {
+      "path": "../alfa-hash"
+    },
+    {
       "path": "../alfa-iterable"
+    },
+    {
+      "path": "../alfa-math"
     },
     {
       "path": "../alfa-option"
