--- a/packages/alfa-cascade/package.json
+++ b/packages/alfa-cascade/package.json
@@ -29,6 +29,7 @@
     "@siteimprove/alfa-iterable": "^0.0.0",
     "@siteimprove/alfa-media": "^0.0.0",
     "@siteimprove/alfa-option": "^0.0.0",
+    "@siteimprove/alfa-predicate": "^0.0.0",
     "@siteimprove/alfa-selector": "^0.0.0"
   },
   "devDependencies": {
