Remove debug log

--- a/packages/alfa-dom/tsconfig.json
+++ b/packages/alfa-dom/tsconfig.json
@@ -34,6 +34,7 @@
     "src/style/sheet.ts",
     "src/tables/structure.ts",
     "test/tables/structure-helpers.spec.ts",
+    "test/tables/structure.spec.tsx",
     "test/tables/microsyntaxes.spec.ts",
     "test/tables/parse-attribute.spec.ts"
   ],
