Initial progress on SIA-R69

--- a/packages/alfa-rules/tsconfig.json
+++ b/packages/alfa-rules/tsconfig.json
@@ -18,6 +18,7 @@
     "src/common/predicate/has-input-type.ts",
     "src/common/predicate/has-name-from.ts",
     "src/common/predicate/has-nondefault-role.ts",
+    "src/common/predicate/has-parent.ts",
     "src/common/predicate/has-role.ts",
     "src/common/predicate/has-tab-index.ts",
     "src/common/predicate/has-text-content.ts",
@@ -94,6 +95,7 @@
     "src/sia-r64/rule.ts",
     "src/sia-r67/rule.ts",
     "src/sia-r68/rule.ts",
+    "src/sia-r69/rule.ts",
     "src/sia-r7/rule.ts",
     "src/sia-r8/rule.ts",
     "src/sia-r9/rule.ts",
