Add abstract `Numeric` value type

--- a/packages/alfa-css/tsconfig.json
+++ b/packages/alfa-css/tsconfig.json
@@ -28,6 +28,7 @@
     "src/value/length.ts",
     "src/value/list.ts",
     "src/value/number.ts",
+    "src/value/numeric.ts",
     "src/value/percentage.ts",
     "src/value/position.ts",
     "src/value/string.ts",
