Re-implement media query matching

--- a/packages/alfa-media/tsconfig.json
+++ b/packages/alfa-media/tsconfig.json
@@ -10,7 +10,13 @@
       "path": "../alfa-device"
     },
     {
+      "path": "../alfa-equatable"
+    },
+    {
       "path": "../alfa-iterable"
+    },
+    {
+      "path": "../alfa-json"
     },
     {
       "path": "../alfa-option"
