--- a/packages/alfa-media/package.json
+++ b/packages/alfa-media/package.json
@@ -24,7 +24,9 @@
   "dependencies": {
     "@siteimprove/alfa-css": "^0.0.0",
     "@siteimprove/alfa-device": "^0.0.0",
+    "@siteimprove/alfa-equatable": "^0.0.0",
     "@siteimprove/alfa-iterable": "^0.0.0",
+    "@siteimprove/alfa-json": "^0.0.0",
     "@siteimprove/alfa-option": "^0.0.0",
     "@siteimprove/alfa-parser": "^0.0.0",
     "@siteimprove/alfa-predicate": "^0.0.0",
