--- a/packages/alfa-trampoline/tsconfig.json
+++ b/packages/alfa-trampoline/tsconfig.json
@@ -4,10 +4,13 @@
   "files": ["src/index.ts", "src/trampoline.ts", "test/trampoline.spec.ts"],
   "references": [
     {
-      "path": "../alfa-either"
+      "path": "../alfa-functor"
     },
     {
-      "path": "../alfa-functor"
+      "path": "../alfa-iterable"
+    },
+    {
+      "path": "../alfa-list"
     },
     {
       "path": "../alfa-mapper"
