Implement `Equatable` for `Node`

--- a/packages/alfa-dom/tsconfig.json
+++ b/packages/alfa-dom/tsconfig.json
@@ -41,6 +41,9 @@
       "path": "../alfa-earl"
     },
     {
+      "path": "../alfa-equatable"
+    },
+    {
       "path": "../alfa-iterable"
     },
     {
