--- a/packages/alfa-dom/package.json
+++ b/packages/alfa-dom/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "@siteimprove/alfa-css": "^0.0.0",
     "@siteimprove/alfa-earl": "^0.0.0",
+    "@siteimprove/alfa-equatable": "^0.0.0",
     "@siteimprove/alfa-iterable": "^0.0.0",
     "@siteimprove/alfa-json": "^0.0.0",
     "@siteimprove/alfa-lazy": "^0.0.0",
