Clean up the core collections

--- a/packages/alfa-set/tsconfig.json
+++ b/packages/alfa-set/tsconfig.json
@@ -28,6 +28,12 @@
       "path": "../alfa-monad"
     },
     {
+      "path": "../alfa-option"
+    },
+    {
+      "path": "../alfa-predicate"
+    },
+    {
       "path": "../alfa-reducer"
     },
     {
