Set missing parent in Cheerio integration

--- a/packages/alfa-cheerio/tsconfig.json
+++ b/packages/alfa-cheerio/tsconfig.json
@@ -13,6 +13,9 @@
       "path": "../alfa-http"
     },
     {
+      "path": "../alfa-option"
+    },
+    {
       "path": "../alfa-test"
     },
     {
