--- a/packages/alfa-cheerio/package.json
+++ b/packages/alfa-cheerio/package.json
@@ -27,6 +27,7 @@
     "@siteimprove/alfa-device": "^0.0.0",
     "@siteimprove/alfa-dom": "^0.0.0",
     "@siteimprove/alfa-http": "^0.0.0",
+    "@siteimprove/alfa-option": "^0.0.0",
     "@siteimprove/alfa-web": "^0.0.0",
     "@types/cheerio": "^0.22.11",
     "cheerio": "^1.0.0-rc.3"
