Split out ARIA node types into separate modules

--- a/packages/alfa-aria/tsconfig.json
+++ b/packages/alfa-aria/tsconfig.json
@@ -7,6 +7,10 @@
     "src/get-name.ts",
     "src/index.ts",
     "src/node.ts",
+    "src/node/container.ts",
+    "src/node/element.ts",
+    "src/node/inert.ts",
+    "src/node/text.ts",
     "src/role.ts",
     "src/role/abstract/command.ts",
     "src/role/abstract/composite.ts",
