--- a/packages/alfa-webdriver/package.json
+++ b/packages/alfa-webdriver/package.json
@@ -30,6 +30,7 @@
     "@siteimprove/alfa-option": "^0.0.0",
     "@siteimprove/alfa-predicate": "^0.0.0",
     "@siteimprove/alfa-web": "^0.0.0",
+    "@types/request": "^2.48.4",
     "webdriverio": "^5.14.3"
   },
   "devDependencies": {
