--- a/packages/alfa-aria/package.json
+++ b/packages/alfa-aria/package.json
@@ -27,6 +27,7 @@
     "@siteimprove/alfa-compatibility": "^0.0.0",
     "@siteimprove/alfa-device": "^0.0.0",
     "@siteimprove/alfa-dom": "^0.0.0",
+    "@siteimprove/alfa-equatable": "^0.0.0",
     "@siteimprove/alfa-iterable": "^0.0.0",
     "@siteimprove/alfa-lazy": "^0.0.0",
     "@siteimprove/alfa-map": "^0.0.0",
