--- a/packages/alfa-aria/package.json
+++ b/packages/alfa-aria/package.json
@@ -29,6 +29,7 @@
     "@siteimprove/alfa-dom": "^0.0.0",
     "@siteimprove/alfa-equatable": "^0.0.0",
     "@siteimprove/alfa-iterable": "^0.0.0",
+    "@siteimprove/alfa-json": "^0.0.0",
     "@siteimprove/alfa-lazy": "^0.0.0",
     "@siteimprove/alfa-map": "^0.0.0",
     "@siteimprove/alfa-mapper": "^0.0.0",
