--- a/packages/alfa-xpath/package.json
+++ b/packages/alfa-xpath/package.json
@@ -23,7 +23,13 @@
   ],
   "dependencies": {
     "@siteimprove/alfa-dom": "^0.0.0",
-    "@siteimprove/alfa-lang": "^0.0.0"
+    "@siteimprove/alfa-equatable": "^0.0.0",
+    "@siteimprove/alfa-json": "^0.0.0",
+    "@siteimprove/alfa-option": "^0.0.0",
+    "@siteimprove/alfa-parser": "^0.0.0",
+    "@siteimprove/alfa-predicate": "^0.0.0",
+    "@siteimprove/alfa-result": "^0.0.0",
+    "@siteimprove/alfa-slice": "^0.0.0"
   },
   "devDependencies": {
     "@siteimprove/alfa-test": "^0.0.0"
