--- a/packages/alfa-xpath/tsconfig.json
+++ b/packages/alfa-xpath/tsconfig.json
@@ -2,32 +2,49 @@
   "$schema": "http://json.schemastore.org/tsconfig",
   "extends": "../tsconfig.json",
   "files": [
-    "src/alphabet.ts",
     "src/builder.ts",
     "src/coerce.ts",
     "src/descriptors.ts",
     "src/environment.ts",
     "src/evaluate.ts",
+    "src/expression.ts",
     "src/function.ts",
     "src/functions/fn.ts",
     "src/functions/index.ts",
-    "src/grammar.ts",
-    "src/guards.ts",
     "src/index.ts",
     "src/matches.ts",
-    "src/parse.ts",
-    "src/serialize.ts",
+    "src/syntax/lexer.ts",
+    "src/syntax/parser.ts",
+    "src/syntax/token.ts",
     "src/types.ts",
     "src/walk.ts",
-    "test/alphabet.spec.ts",
-    "test/grammar.spec.ts"
+    "test/syntax/lexer.spec.ts",
+    "test/syntax/parser.spec.ts"
   ],
   "references": [
     {
       "path": "../alfa-dom"
     },
     {
-      "path": "../alfa-lang"
+      "path": "../alfa-equatable"
+    },
+    {
+      "path": "../alfa-json"
+    },
+    {
+      "path": "../alfa-option"
+    },
+    {
+      "path": "../alfa-parser"
+    },
+    {
+      "path": "../alfa-predicate"
+    },
+    {
+      "path": "../alfa-result"
+    },
+    {
+      "path": "../alfa-slice"
     },
     {
       "path": "../alfa-test"
