--- a/packages/alfa-iana/package.json
+++ b/packages/alfa-iana/package.json
@@ -25,8 +25,11 @@
     "prepare": "node scripts/subtags.js"
   },
   "dependencies": {
-    "@siteimprove/alfa-lang": "^0.0.0",
-    "@siteimprove/alfa-option": "^0.0.0"
+    "@siteimprove/alfa-equatable": "^0.0.0",
+    "@siteimprove/alfa-json": "^0.0.0",
+    "@siteimprove/alfa-map": "^0.0.0",
+    "@siteimprove/alfa-option": "^0.0.0",
+    "@siteimprove/alfa-slice": "^0.0.0"
   },
   "devDependencies": {
     "@siteimprove/alfa-test": "^0.0.0"
