Use Set to store cells

--- a/packages/alfa-dom/tsconfig.json
+++ b/packages/alfa-dom/tsconfig.json
@@ -71,6 +71,9 @@
       "path": "../alfa-predicate"
     },
     {
+      "path": "../alfa-set"
+    },
+    {
       "path": "../alfa-sequence"
     },
     {
