--- a/packages/alfa-dom/package.json
+++ b/packages/alfa-dom/package.json
@@ -33,6 +33,7 @@
     "@siteimprove/alfa-mapper": "^0.0.0",
     "@siteimprove/alfa-option": "^0.0.0",
     "@siteimprove/alfa-predicate": "^0.0.0",
+    "@siteimprove/alfa-set": "^0.0.0",
     "@siteimprove/alfa-sequence": "^0.0.0"
   },
   "devDependencies": {
