--- a/packages/alfa-dom/tsconfig.json
+++ b/packages/alfa-dom/tsconfig.json
@@ -32,7 +32,9 @@
     "src/style/rule/style.ts",
     "src/style/rule/supports.ts",
     "src/style/sheet.ts",
-    "src/tables/structure.ts",
+    "src/tables/groups.ts",
+    "src/tables/helpers.ts",
+    "src/tables/table.ts",
     "test/tables/structure-helpers.spec.ts",
     "test/tables/testcases.tsx",
     "test/tables/structure.spec.tsx",
