--- a/packages/alfa-dom/package.json
+++ b/packages/alfa-dom/package.json
@@ -33,8 +33,10 @@
     "@siteimprove/alfa-mapper": "^0.0.0",
     "@siteimprove/alfa-option": "^0.0.0",
     "@siteimprove/alfa-predicate": "^0.0.0",
+    "@siteimprove/alfa-sequence": "^0.0.0",
     "@siteimprove/alfa-set": "^0.0.0",
-    "@siteimprove/alfa-sequence": "^0.0.0"
+    "@types/assert": "^1.4.6",
+    "assert": "^2.0.0"
   },
   "devDependencies": {
     "@siteimprove/alfa-test": "^0.0.0"
