--- a/packages/alfa-dom/tsconfig.json
+++ b/packages/alfa-dom/tsconfig.json
@@ -32,6 +32,11 @@
     "src/style/rule/style.ts",
     "src/style/rule/supports.ts",
     "src/style/sheet.ts",
+    "src/tables/cell.ts",
+    "src/tables/colgroup.ts",
+    "src/tables/is-covering.ts",
+    "src/tables/row.ts",
+    "src/tables/rowgroup.ts",
     "src/tables/groups.ts",
     "src/tables/helpers.ts",
     "src/tables/table.ts",
