--- a/packages/alfa-rules/package.json
+++ b/packages/alfa-rules/package.json
@@ -33,6 +33,7 @@
     "@siteimprove/alfa-future": "^0.0.0",
     "@siteimprove/alfa-iana": "^0.0.0",
     "@siteimprove/alfa-iterable": "^0.0.0",
+    "@siteimprove/alfa-map": "^0.0.0",
     "@siteimprove/alfa-math": "^0.0.0",
     "@siteimprove/alfa-media": "^0.0.0",
     "@siteimprove/alfa-option": "^0.0.0",
