--- a/packages/alfa-rules/tsconfig.json
+++ b/packages/alfa-rules/tsconfig.json
@@ -78,6 +78,7 @@
     "src/sia-r43/rule.ts",
     "src/sia-r44/rule.ts",
     "src/sia-r45/rule.ts",
+    "src/sia-r46/rule.ts",
     "src/sia-r47/rule.ts",
     "src/sia-r48/rule.ts",
     "src/sia-r49/rule.ts",
