--- a/packages/alfa-rules/tsconfig.json
+++ b/packages/alfa-rules/tsconfig.json
@@ -102,6 +102,7 @@
     "test/sia-r24/rule.spec.tsx",
     "test/sia-r38/rule.spec.tsx",
     "test/sia-r45/rule.spec.tsx",
+    "test/sia-r46/rule.spec.tsx",
     "test/sia-r57/rule.spec.tsx",
     "test/sia-r64/rule.spec.tsx",
     "test/sia-r68/rule.spec.tsx"
