Add hasHeadingLevel predicate

--- a/packages/alfa-rules/tsconfig.json
+++ b/packages/alfa-rules/tsconfig.json
@@ -14,6 +14,7 @@
     "src/common/predicate/has-category.ts",
     "src/common/predicate/has-child.ts",
     "src/common/predicate/has-descendant.ts",
+    "src/common/predicate/has-heading-level.ts",
     "src/common/predicate/has-id.ts",
     "src/common/predicate/has-input-type.ts",
     "src/common/predicate/has-name-from.ts",
