--- a/packages/alfa-rules/package.json
+++ b/packages/alfa-rules/package.json
@@ -41,6 +41,7 @@
     "@siteimprove/alfa-record": "^0.0.0",
     "@siteimprove/alfa-result": "^0.0.0",
     "@siteimprove/alfa-style": "^0.0.0",
+    "@siteimprove/alfa-table": "0.0.0",
     "@siteimprove/alfa-trilean": "^0.0.0",
     "@siteimprove/alfa-web": "^0.0.0"
   },
