--- a/packages/alfa-rules/tsconfig.json
+++ b/packages/alfa-rules/tsconfig.json
@@ -171,6 +171,9 @@
       "path": "../alfa-style"
     },
     {
+      "path": "../alfa-table"
+    },
+    {
       "path": "../alfa-test"
     },
     {
