--- a/packages/alfa-webdriver/package.json
+++ b/packages/alfa-webdriver/package.json
@@ -1,4 +1,5 @@
 {
+  "$schema": "http://json.schemastore.org/package",
   "private": true,
   "name": "@siteimprove/alfa-webdriver",
   "author": "Siteimprove A/S",
