--- a/packages/alfa-compatibility/package.json
+++ b/packages/alfa-compatibility/package.json
@@ -30,5 +30,9 @@
   "devDependencies": {
     "@siteimprove/alfa-test": "^0.0.0",
     "mdn-browser-compat-data": "0.0.94"
+  },
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://npm.pkg.github.com/"
   }
 }
