--- a/packages/alfa-result/package.json
+++ b/packages/alfa-result/package.json
@@ -31,5 +31,9 @@
   },
   "devDependencies": {
     "@siteimprove/alfa-test": "^0.0.0"
+  },
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://npm.pkg.github.com/"
   }
 }
