--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -1,13 +1,16 @@
 name: Integrate
-on: [push]
+on:
+  push:
+    branches:
+      - "*"
 jobs:
   build:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [10.x, 12.x]
+        node-version: [10, 12]
     steps:
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
@@ -15,7 +18,6 @@ jobs:
         with:
           path: .cache/yarn
           key: yarn-${{ hashFiles('yarn.lock') }}
-      - run: npm install -g yarn
-      - run: yarn install --ignore-scripts --ignore-platform --cache-folder .cache/yarn
+      - run: yarn install --ignore-platform --cache-folder .cache/yarn
       - run: yarn build
       - run: yarn test
