--- a/packages/alfa-table/tsconfig.json
+++ b/packages/alfa-table/tsconfig.json
@@ -3,13 +3,13 @@
   "extends": "../tsconfig.json",
   "files": [
     "src/cell.ts",
-    "src/colgroup.ts",
+    "src/column-group.ts",
     "src/header.ts",
     "src/helpers.ts",
     "src/index.ts",
     "src/microsyntaxes.ts",
     "src/row.ts",
-    "src/rowgroup.ts",
+    "src/row-group.ts",
     "src/table.ts",
     "test/microsyntaxes.spec.ts",
     "test/structure-helpers.spec.tsx",
