--- a/packages/alfa-table/package.json
+++ b/packages/alfa-table/package.json
@@ -19,6 +19,7 @@
     "src/**/*.d.ts"
   ],
   "dependencies": {
+    "@siteimprove/alfa-cache": "^0.0.0",
     "@siteimprove/alfa-comparable": "^0.0.0",
     "@siteimprove/alfa-dom": "^0.0.0",
     "@siteimprove/alfa-equatable": "^0.0.0",
