Cell header association (#197)
* Implement table model building, including cell-header association

--- a/packages/alfa-dom/tsconfig.json
+++ b/packages/alfa-dom/tsconfig.json
@@ -31,7 +31,8 @@
     "src/style/rule/page.ts",
     "src/style/rule/style.ts",
     "src/style/rule/supports.ts",
-    "src/style/sheet.ts"
+    "src/style/sheet.ts",
+    "test/node/attribute.spec.ts"
   ],
   "references": [
     {
@@ -63,9 +64,6 @@
     },
     {
       "path": "../alfa-sequence"
-    },
-    {
-      "path": "../alfa-test"
     }
   ]
 }
