--- a/packages/alfa-list/tsconfig.json
+++ b/packages/alfa-list/tsconfig.json
@@ -7,13 +7,10 @@
       "path": "../alfa-bits"
     },
     {
+      "path": "../alfa-collection"
+    },
+    {
       "path": "../alfa-equatable"
-    },
-    {
-      "path": "../alfa-foldable"
-    },
-    {
-      "path": "../alfa-functor"
     },
     {
       "path": "../alfa-iterable"
@@ -26,9 +23,6 @@
     },
     {
       "path": "../alfa-mapper"
-    },
-    {
-      "path": "../alfa-monad"
     },
     {
       "path": "../alfa-option"
