SIA R45 and SIA R46 (#205)

--- a/packages/alfa-rules/tsconfig.json
+++ b/packages/alfa-rules/tsconfig.json
@@ -78,6 +78,8 @@
     "src/sia-r42/rule.ts",
     "src/sia-r43/rule.ts",
     "src/sia-r44/rule.ts",
+    "src/sia-r45/rule.ts",
+    "src/sia-r46/rule.ts",
     "src/sia-r47/rule.ts",
     "src/sia-r48/rule.ts",
     "src/sia-r49/rule.ts",
@@ -102,6 +104,8 @@
     "test/sia-r2/rule.spec.tsx",
     "test/sia-r24/rule.spec.tsx",
     "test/sia-r38/rule.spec.tsx",
+    "test/sia-r45/rule.spec.tsx",
+    "test/sia-r46/rule.spec.tsx",
     "test/sia-r53/rule.spec.tsx",
     "test/sia-r57/rule.spec.tsx",
     "test/sia-r64/rule.spec.tsx",
@@ -143,6 +147,9 @@
       "path": "../alfa-iterable"
     },
     {
+      "path": "../alfa-map"
+    },
+    {
       "path": "../alfa-math"
     },
     {
@@ -162,6 +169,9 @@
     },
     {
       "path": "../alfa-style"
+    },
+    {
+      "path": "../alfa-table"
     },
     {
       "path": "../alfa-test"
