--- a/packages/alfa-rules/package.json
+++ b/packages/alfa-rules/package.json
@@ -30,6 +30,7 @@
     "@siteimprove/alfa-future": "^0.0.0",
     "@siteimprove/alfa-iana": "^0.0.0",
     "@siteimprove/alfa-iterable": "^0.0.0",
+    "@siteimprove/alfa-map": "^0.0.0",
     "@siteimprove/alfa-math": "^0.0.0",
     "@siteimprove/alfa-media": "^0.0.0",
     "@siteimprove/alfa-option": "^0.0.0",
@@ -37,6 +38,7 @@
     "@siteimprove/alfa-record": "^0.0.0",
     "@siteimprove/alfa-result": "^0.0.0",
     "@siteimprove/alfa-style": "^0.0.0",
+    "@siteimprove/alfa-table": "0.0.0",
     "@siteimprove/alfa-trilean": "^0.0.0",
     "@siteimprove/alfa-web": "^0.0.0"
   },
