--- a/packages/alfa-comparable/tsconfig.json
+++ b/packages/alfa-comparable/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "$schema": "http://json.schemastore.org/tsconfig",
   "extends": "../tsconfig.json",
-  "files": ["src/comparable.ts", "src/index.ts"],
+  "files": ["src/comparable.ts", "src/comparison.ts", "src/index.ts"],
   "references": [
     {
       "path": "../alfa-test"
