Implement epsilon-aware `equals()` for numbers

--- a/packages/alfa-math/tsconfig.json
+++ b/packages/alfa-math/tsconfig.json
@@ -3,6 +3,7 @@
   "extends": "../tsconfig.json",
   "files": [
     "src/clamp.ts",
+    "src/equals.ts",
     "src/index.ts",
     "src/matrix.ts",
     "src/mod.ts",
