Don't use `prepare` scripts for code generation

--- a/packages/alfa-compatibility/package.json
+++ b/packages/alfa-compatibility/package.json
@@ -18,7 +18,7 @@
     "src/**/*.d.ts"
   ],
   "scripts": {
-    "prepare": "node scripts/features.js && node scripts/browsers.js"
+    "generate": "node scripts/features.js && node scripts/browsers.js"
   },
   "dependencies": {
     "@siteimprove/alfa-iterable": "^0.0.0",
