--- a/lerna.json
+++ b/lerna.json
@@ -3,9 +3,7 @@
   "version": "0.0.0",
   "npmClient": "yarn",
   "useWorkspaces": true,
-  "packages": [
-    "packages/*"
-  ],
+  "packages": ["packages/*"],
   "command": {
     "publish": {
       "registry": "https://npm.pkg.github.com"
