--- a/packages/alfa-option/package.json
+++ b/packages/alfa-option/package.json
@@ -4,7 +4,7 @@
   "homepage": "https://siteimprove.com",
   "version": "0.0.0",
   "license": "MIT",
-  "description": "Suite of open and standards-based tools for performing reliable accessibility conformance testing at scale",
+  "description": "An implementation of optional values, which are values that may or may not be present",
   "repository": {
     "type": "git",
     "url": "https://github.com/siteimprove/alfa.git",
