Add missing package references

--- a/packages/tsconfig.json
+++ b/packages/tsconfig.json
@@ -69,9 +69,11 @@
     { "path": "alfa-set" },
     { "path": "alfa-slice" },
     { "path": "alfa-style" },
+    { "path": "alfa-table" },
     { "path": "alfa-test" },
     { "path": "alfa-thunk" },
     { "path": "alfa-trampoline" },
+    { "path": "alfa-trilean" },
     { "path": "alfa-unexpected" },
     { "path": "alfa-vue" },
     { "path": "alfa-web" },
