--- a/packages/tsconfig.json
+++ b/packages/tsconfig.json
@@ -72,6 +72,7 @@
     { "path": "alfa-table" },
     { "path": "alfa-test" },
     { "path": "alfa-thunk" },
+    { "path": "alfa-time" },
     { "path": "alfa-trampoline" },
     { "path": "alfa-trilean" },
     { "path": "alfa-unexpected" },
