--- a/packages/alfa-scraper/package.json
+++ b/packages/alfa-scraper/package.json
@@ -21,8 +21,11 @@
     "@siteimprove/alfa-device": "^0.0.1",
     "@siteimprove/alfa-dom": "^0.0.1",
     "@siteimprove/alfa-encoding": "^0.0.1",
+    "@siteimprove/alfa-equatable": "^0.0.1",
     "@siteimprove/alfa-http": "^0.0.1",
+    "@siteimprove/alfa-json": "^0.0.1",
     "@siteimprove/alfa-puppeteer": "^0.0.1",
+    "@siteimprove/alfa-time": "^0.0.1",
     "@siteimprove/alfa-web": "^0.0.1",
     "@types/puppeteer": "^2.0.1",
     "puppeteer": "^2.1.1"
