--- a/packages/alfa-scraper/tsconfig.json
+++ b/packages/alfa-scraper/tsconfig.json
@@ -1,7 +1,13 @@
 {
   "$schema": "http://json.schemastore.org/tsconfig",
   "extends": "../tsconfig.json",
-  "files": ["src/index.ts", "src/scraper.ts"],
+  "files": [
+    "src/awaiter.ts",
+    "src/credentials.ts",
+    "src/index.ts",
+    "src/scraper.ts",
+    "src/screenshot.ts"
+  ],
   "references": [
     {
       "path": "../alfa-device"
@@ -13,13 +19,22 @@
       "path": "../alfa-encoding"
     },
     {
+      "path": "../alfa-equatable"
+    },
+    {
       "path": "../alfa-http"
+    },
+    {
+      "path": "../alfa-json"
     },
     {
       "path": "../alfa-puppeteer"
     },
     {
       "path": "../alfa-test"
+    },
+    {
+      "path": "../alfa-time"
     },
     {
       "path": "../alfa-web"
