Provide initial implementation of SIA-R69 (#228)

--- a/packages/alfa-rules/tsconfig.json
+++ b/packages/alfa-rules/tsconfig.json
@@ -94,6 +94,7 @@
     "src/sia-r64/rule.ts",
     "src/sia-r67/rule.ts",
     "src/sia-r68/rule.ts",
+    "src/sia-r69/rule.ts",
     "src/sia-r7/rule.ts",
     "src/sia-r8/rule.ts",
     "src/sia-r9/rule.ts",
@@ -111,7 +112,8 @@
     "test/sia-r57/rule.spec.tsx",
     "test/sia-r64/rule.spec.tsx",
     "test/sia-r61/rule.spec.tsx",
-    "test/sia-r68/rule.spec.tsx"
+    "test/sia-r68/rule.spec.tsx",
+    "test/sia-r69/rule.spec.tsx"
   ],
   "references": [
     {
