Make `Collection` extend `Hashable`

--- a/packages/alfa-list/tsconfig.json
+++ b/packages/alfa-list/tsconfig.json
@@ -13,6 +13,9 @@
       "path": "../alfa-equatable"
     },
     {
+      "path": "../alfa-hash"
+    },
+    {
       "path": "../alfa-iterable"
     },
     {
