--- a/packages/alfa-collection/package.json
+++ b/packages/alfa-collection/package.json
@@ -21,6 +21,7 @@
     "@siteimprove/alfa-equatable": "^0.0.1",
     "@siteimprove/alfa-foldable": "^0.0.1",
     "@siteimprove/alfa-functor": "^0.0.1",
+    "@siteimprove/alfa-hash": "^0.0.1",
     "@siteimprove/alfa-iterable": "^0.0.1",
     "@siteimprove/alfa-json": "^0.0.1",
     "@siteimprove/alfa-mapper": "^0.0.1",
