--- a/packages/alfa-collection/tsconfig.json
+++ b/packages/alfa-collection/tsconfig.json
@@ -13,6 +13,9 @@
       "path": "../alfa-functor"
     },
     {
+      "path": "../alfa-hash"
+    },
+    {
       "path": "../alfa-iterable"
     },
     {
