--- a/packages/alfa-collection/tsconfig.json
+++ b/packages/alfa-collection/tsconfig.json
@@ -4,6 +4,9 @@
   "files": ["src/collection.ts", "src/index.ts"],
   "references": [
     {
+      "path": "../alfa-applicative"
+    },
+    {
       "path": "../alfa-equatable"
     },
     {
