--- a/packages/alfa-device/tsconfig.json
+++ b/packages/alfa-device/tsconfig.json
@@ -9,6 +9,15 @@
   ],
   "references": [
     {
+      "path": "../alfa-equatable"
+    },
+    {
+      "path": "../alfa-hash"
+    },
+    {
+      "path": "../alfa-json"
+    },
+    {
       "path": "../alfa-test"
     }
   ]
