Progress on text metric rules

--- a/packages/alfa-style/tsconfig.json
+++ b/packages/alfa-style/tsconfig.json
@@ -8,7 +8,9 @@
     "src/property/color.ts",
     "src/property/display.ts",
     "src/property/font.ts",
+    "src/property/line.ts",
     "src/property/opacity.ts",
+    "src/property/text.ts",
     "src/property/transform.ts",
     "src/property/visibility.ts",
     "src/resolver.ts",
