Progress on SIA-R84

--- a/packages/alfa-rules/tsconfig.json
+++ b/packages/alfa-rules/tsconfig.json
@@ -104,6 +104,7 @@
     "src/sia-r8/rule.ts",
     "src/sia-r80/rule.ts",
     "src/sia-r82/rule.ts",
+    "src/sia-r84/rule.ts",
     "src/sia-r9/rule.ts",
     "test/common/evaluate.ts",
     "test/common/oracle.ts",
@@ -127,7 +128,8 @@
     "test/sia-r74/rule.spec.tsx",
     "test/sia-r75/rule.spec.tsx",
     "test/sia-r80/rule.spec.tsx",
-    "test/sia-r82/rule.spec.tsx"
+    "test/sia-r82/rule.spec.tsx",
+    "test/sia-r84/rule.spec.tsx"
   ],
   "references": [
     {
