Refactor group headers finding

--- a/packages/alfa-table/tsconfig.json
+++ b/packages/alfa-table/tsconfig.json
@@ -4,6 +4,7 @@
   "files": [
     "src/cell.ts",
     "src/column-group.ts",
+    "src/covering.ts",
     "src/helpers.ts",
     "src/index.ts",
     "src/microsyntaxes.ts",
