Provide initial implementation of SIA-R84 (#239)

--- a/packages/alfa-rules/tsconfig.json
+++ b/packages/alfa-rules/tsconfig.json
@@ -107,6 +107,7 @@
     "src/sia-r81/rule.ts",
     "src/sia-r82/rule.ts",
     "src/sia-r83/rule.ts",
+    "src/sia-r84/rule.ts",
     "src/sia-r9/rule.ts",
     "test/common/evaluate.ts",
     "test/common/oracle.ts",
@@ -132,7 +133,8 @@
     "test/sia-r80/rule.spec.tsx",
     "test/sia-r81/rule.spec.tsx",
     "test/sia-r82/rule.spec.tsx",
-    "test/sia-r83/rule.spec.tsx"
+    "test/sia-r83/rule.spec.tsx",
+    "test/sia-r84/rule.spec.tsx"
   ],
   "references": [
     {
